[gd_scene load_steps=4 format=2]

[ext_resource path="res://Screens/Scripts/Store.gd" type="Script" id=1]
[ext_resource path="res://UI/Themes/Button Main.tres" type="Theme" id=2]
[ext_resource path="res://UI/Themes/Title.tres" type="Theme" id=3]

[node name="Store" type="Node2D"]
script = ExtResource( 1 )

[node name="lblStore" type="Label" parent="."]
margin_right = 600.0
margin_bottom = 99.0
theme = ExtResource( 3 )
text = "Store"
align = 1
valign = 1

[node name="lblPoints" type="Label" parent="."]
margin_top = 77.0
margin_right = 600.0
margin_bottom = 139.0
theme = ExtResource( 3 )
text = "Points: 0"
align = 1
valign = 1

[node name="btnMenu" type="Button" parent="."]
margin_left = 170.0
margin_top = 889.0
margin_right = 443.0
margin_bottom = 991.0
theme = ExtResource( 2 )
text = "Menu"

[node name="StoreItems" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="btnMenu" to="." method="_on_btnMenu_pressed"]
